Sat Mar 30 16:35:02 2002  Joern Thyssen  <jthyssen@dk.ibm.com>

	New structure of "annotate". Allows for separate skills in
	movenormal and moveresign.

	FIXME: sgf.c: how to save/read skill for movenormal and moveresign?!

	* play.c (AddMoveRecord, ComputerTurn, TryBearoff, AnnotateMove,
	DumpGameList, CommandMove, CommandRoll): handle move/cube
	skill separately for movenormal.  
	* analysis.c (AnalyzeMove): ditto.
	* sgf.c (SaveGame, RestoreNode): ditto.
	* import.c (ParseMatMove, ParseOldMove, ImportSSGGame): ditto.
	* latex.c (ExportGameLatex): ditto.
	* postscript.c (ExportGamePostscript): ditto.
	* html.c (HTMLPrintMoveAnalysis): ditto.

	* gtkgame.c (GTKAddMoveRecord): ditto.
	* gtkgame.c (SetAnnotation): add cube skill menu for movenormal.

	* gnubg.c: new "annotate" commands.
	

Fri Mar 29 21:17:19 2002  Joern Thyssen  <jthyssen@dk.ibm.com>

	New command "set automatic analysis". When activated it'll
	analyse human players moves on the fly. Should be combined 
	with some GTK magic to let the user know he has made a bad move,
	cube decision, or whatever.

	* gtkgame.c: menu entries for automatic analysis.
	* play.c (autoAnalyseMove): new function.
	* play.c (AddMoveRecord): call autoAnalyseMove.
	* set.c (CommandSetAutoAnalysis): new function.
	* show.c (CommandShowAutomatic): show automatic analysis.
	* gnubg.c (CommandSaveSettings): save automatic analysis.
	
	* analysis.c (AnalyzeMove): do analysis only if not analysed
	already on the same or higher settings.
	

Thu Mar 28 22:11:41 2002  Joern Thyssen  <jthyssen@dk.ibm.com>

	Cache gammon prices for performance.

	* matchequity.c (calcGammonPrices, getGammonPrice): new functions.

	* eval.c (SetCubeInfoMatch): used cached gammon values.

Thu Mar 28 16:48:24 2002  Joern Thyssen  <jthyssen@dk.ibm.com>

	* eval.c (SetCubeInfoMatch): fix bug in calculation of gammon prices.

Thu Mar 28 15:09:24 2002  Joern Thyssen  <jthyssen@dk.ibm.com>
	
	* eval.c (SanityCheck): fix bug. SanityCheck would report